--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
@@ -19,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-image-picker": "^7.1.0",
+    "react-native-maps": "^1.10.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-web": "~0.19.6"
